[package]
name = "sitelen"
version = "0.1.0"
edition = "2024"

[dependencies]
bezier-rs = "0.4.0"
bytemuck = { version = "1.22.0", features = [ "derive" ] }
egui = "0.31.1"
egui-winit = "0.31.1"
env_logger = "0.11.8"
glam = { version = "0.30.2", features = ["bytemuck"] }
image = "0.25.6"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.0"
# wgpu = { version = "25.0.0", features = ["webgl"] }
winit = "0.30.9"
